--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,28 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+/* Estilo para el contenedor principal del Layout */
+.layout {
+  min-height: 100vh; /* Asegura que el contenedor ocupe al menos toda la altura de la ventana */
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-direction: column; /* Organiza los hijos en columna */
 }
 
-.App-link {
-  color: #61dafb;
+/* Estilo para el Layout de contenido */
+.site-layout {
+  display: flex;
+  flex-direction: column; /* Organiza los hijos en columna */
+  flex: 1; /* Hace que el Layout ocupe el espacio restante */
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* Estilo para el contenedor del contenido principal */
+.site-layout-content {
+  flex: 1; /* Hace que el contenido ocupe el espacio restante y empuje el Footer hacia abajo */
+  padding: 0 50px;
+}
+
+/* Estilo para el Footer */
+.footer {
+  background: #001529; /* Ajusta el color de fondo según sea necesario */
+  color: #ffffff; /* Ajusta el color del texto según sea necesario */
+  text-align: center;
+  padding: 1rem; /* Ajusta el relleno según sea necesario */
+  margin-top: auto; /* Empuja el footer hacia el fondo del contenedor */
 }
